[gd_scene load_steps=7 format=3 uid="uid://dot06br0k3e7s"]

[ext_resource type="Script" path="res://scenes/deckBuilder/scripts/deckBuilder.gd" id="1_ssxq1"]
[ext_resource type="StyleBox" uid="uid://btkbuk73rd6y" path="res://shared/styles/buttons.tres" id="2_xxups"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0aopp"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tb8ml"]
bg_color = Color(0.333333, 0.333333, 0.333333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sp8t1"]
bg_color = Color(0.333333, 0.333333, 0.333333, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lumya"]
bg_color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="deckBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ssxq1")

[node name="bg" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0aopp")

[node name="back" type="Button" parent="bg"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 40.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("2_xxups")
text = "Back
"

[node name="newDeck" type="Button" parent="bg"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 28.0
offset_right = -69.0
offset_bottom = 59.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("2_xxups")
text = "New Deck"

[node name="deckBg" type="Panel" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = 64.0
offset_right = -69.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tb8ml")

[node name="margin" type="MarginContainer" parent="bg/deckBg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="deckWrapper" type="ScrollContainer" parent="bg/deckBg/margin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sp8t1")

[node name="center" type="CenterContainer" parent="bg/deckBg/margin/deckWrapper"]
layout_mode = 2
size_flags_horizontal = 3

[node name="deckHolder" type="GridContainer" parent="bg/deckBg/margin/deckWrapper/center"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="editDeck" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0aopp")

[node name="done" type="Button" parent="editDeck"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 41.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_styles/normal = ExtResource("2_xxups")
text = "Done"

[node name="cancel" type="Button" parent="editDeck"]
layout_mode = 1
offset_left = 79.0
offset_top = 10.0
offset_right = 139.0
offset_bottom = 41.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_xxups")
text = "Cancel"

[node name="deleteDeck" type="Button" parent="editDeck"]
custom_minimum_size = Vector2(100, 0)
offset_left = 165.0
offset_top = 10.0
offset_right = 256.0
offset_bottom = 41.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_xxups")
text = "Delete deck"

[node name="setActive" type="Button" parent="editDeck"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -327.0
offset_top = 9.0
offset_right = -197.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("2_xxups")
text = "Set as play deck"

[node name="activeText" type="Label" parent="editDeck"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -338.0
offset_top = 9.0
offset_right = -188.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Current play deck"

[node name="deckName" type="HBoxContainer" parent="editDeck"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.0
offset_top = 9.0
offset_right = 94.0
offset_bottom = 49.0
grow_horizontal = 2

[node name="showDialog" type="HBoxContainer" parent="editDeck/deckName"]
layout_mode = 2

[node name="currentDeckName" type="Label" parent="editDeck/deckName/showDialog"]
layout_mode = 2
text = "Deck name"

[node name="changeDialogBtn" type="Button" parent="editDeck/deckName/showDialog"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("2_xxups")
text = "change"

[node name="changeDialog" type="HBoxContainer" parent="editDeck/deckName"]
visible = false
layout_mode = 2

[node name="newDeckName" type="LineEdit" parent="editDeck/deckName/changeDialog"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="applyDeckName" type="Button" parent="editDeck/deckName/changeDialog"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_styles/normal = ExtResource("2_xxups")
text = "Apply"

[node name="cancelDeckName" type="Button" parent="editDeck/deckName/changeDialog"]
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/normal = ExtResource("2_xxups")
text = "Cancel"

[node name="selectedCards" type="Label" parent="editDeck"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Selected Cards: 0"

[node name="marginVertAlign" type="MarginContainer" parent="editDeck"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 55.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="vertAlign" type="HBoxContainer" parent="editDeck/marginVertAlign"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="requirements" type="VBoxContainer" parent="editDeck/marginVertAlign/vertAlign"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="cardWrapper" type="ScrollContainer" parent="editDeck/marginVertAlign/vertAlign"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="center" type="CenterContainer" parent="editDeck/marginVertAlign/vertAlign/cardWrapper"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cardHolder" type="GridContainer" parent="editDeck/marginVertAlign/vertAlign/cardWrapper/center"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="deleteDeckDialog" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="deleteDialog" type="Panel" parent="deleteDeckDialog"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -56.0
offset_right = 175.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lumya")

[node name="deleteText" type="Label" parent="deleteDeckDialog/deleteDialog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.5
offset_top = 27.0
offset_right = 145.5
offset_bottom = 53.0
grow_horizontal = 2
text = "Do you really wanna delete this deck?"

[node name="yes" type="Button" parent="deleteDeckDialog/deleteDialog"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -43.0
offset_right = -13.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = ExtResource("2_xxups")
text = "yes"

[node name="no" type="Button" parent="deleteDeckDialog/deleteDialog"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -43.0
offset_right = 48.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = ExtResource("2_xxups")
text = "no"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="bg/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="bg/newDeck" to="." method="_on_new_deck_pressed"]
[connection signal="resized" from="bg/deckBg/margin/deckWrapper" to="." method="onResized"]
[connection signal="pressed" from="editDeck/done" to="." method="onEditDeckDone"]
[connection signal="pressed" from="editDeck/cancel" to="." method="onEditDeckCanceled"]
[connection signal="pressed" from="editDeck/deleteDeck" to="." method="_on_delete_deck_pressed"]
[connection signal="pressed" from="editDeck/setActive" to="." method="_on_set_active_pressed"]
[connection signal="pressed" from="editDeck/deckName/showDialog/changeDialogBtn" to="." method="showChangeDeckName"]
[connection signal="pressed" from="editDeck/deckName/changeDialog/applyDeckName" to="." method="applyDeckName"]
[connection signal="pressed" from="editDeck/deckName/changeDialog/cancelDeckName" to="." method="closeChangeDeckName"]
[connection signal="resized" from="editDeck/marginVertAlign/vertAlign/cardWrapper" to="." method="onResized"]
[connection signal="pressed" from="deleteDeckDialog/deleteDialog/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="deleteDeckDialog/deleteDialog/no" to="." method="_on_no_pressed"]
